--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ body{
     overflow: hidden;
     text-align: center;
 
-    font-size: 20px;
+    font-size: 15px;
 
     width: 100%;
     height: 40px;
@@ -207,4 +207,14 @@ body{
 #newNote:hover{
     background-color: lightgray;
     color: black;
+}
+
+#noteSearch{
+    width: 100%;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+
+.currentNote button{
+    font-weight: bold;
 }
